# desafio_lacrei

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci-cd.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/core/: exceptions.py  middleware.py  settings.py  urls.py
app/user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0002_alter_profissional_contato_consulta.py  0003_rename_name_profissional_nome.py  0004_alter_consulta_data.py
